# FlightDataManager

./: CMakeLists.txt  FlightData.h  README.md  csvreader.cpp  csvreader.h  databasehandler.cpp  databasehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
outputs/: output.db  output.json
